--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,9 @@
 .translate-z-0 {
   transform: translateZ(0px);
 }
+.translate-z-1 {
+  transform: translateZ(1px);
+}
 .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
 .swiper-pagination-horizontal.swiper-pagination-bullets
   .swiper-pagination-bullet {
@@ -26,10 +29,10 @@
     @apply w-full h-screen overflow-hidden;
   }
   .h1 {
-    @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-semibold;
+    @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-bold;
   }
   .h2 {
-    @apply text-[35px] leading-tight md:text-[54px] md:leading-[1.3] mb-4 font-semibold;
+    @apply text-[24px] leading-tight md:text-[36px] md:leading-[1.3] mb-4 font-semibold;
   }
   p {
     @apply leading-[1.8] text-white/60 font-light;
