--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,7 @@
     @apply bg-secondary bg-gradient-to-r from-primary/10 via-black/30 to-black/10 leading-relaxed;
   }
   .page {
-    @apply w-full h-screen overflow-scroll lg:overflow-hidden  ;
+    @apply w-full h-screen overflow-scroll xl:overflow-hidden  ;
   }
   .h1 {
     @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-bold;
