--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,30 +26,30 @@
     @apply bg-secondary bg-gradient-to-r from-primary/10 via-black/30 to-black/10 leading-relaxed;
   }
   .page {
-    /* min-h-screen */
-    @apply w-full h-screen overflow-scroll xl:overflow-hidden  ;
+    /* min-h-screen NEW h-screen OLD */
+    @apply min-h-screen w-full overflow-scroll bg-site bg-cover bg-no-repeat text-slate-300 scrollbar-hide xl:overflow-hidden;
   }
   .h1 {
-    @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-bold;
+    @apply mb-8 text-[35px] font-bold leading-tight md:text-[60px] md:leading-[1.3];
   }
   .h2 {
-    @apply text-[24px] leading-tight md:text-[36px] md:leading-[1.3] mb-4 font-semibold;
+    @apply mb-4 text-[24px] font-semibold leading-tight md:text-[36px] md:leading-[1.3];
   }
   p {
-    @apply leading-[1.8] text-white/60 font-light;
+    @apply font-light leading-[1.8] text-white/60;
   }
   .btn,
   .input {
     @apply h-[52px];
   }
   .input {
-    @apply w-full h-[52px] rounded-lg pl-6 capitalize;
+    @apply h-[52px] w-full rounded-lg pl-6 capitalize;
   }
   .input,
   .textarea {
-    @apply bg-transparent outline-none focus:ring-1 focus:ring-accent border border-white/20 placeholder:text-white/30 placeholder:font-light;
+    @apply border border-white/20 bg-transparent outline-none placeholder:font-light placeholder:text-white/30 focus:ring-1 focus:ring-accent;
   }
   .textarea {
-    @apply w-full h-[180px] p-6 capitalize rounded-lg resize-none;
+    @apply h-[180px] w-full resize-none rounded-lg p-6 capitalize;
   }
 }
