--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,4 +52,7 @@
   .textarea {
     @apply h-[180px] w-full resize-none rounded-lg p-6 capitalize;
   }
+  .button {
+    @apply flex items-center bg-slate-800/60 text-light p-3 px-6 rounded-lg text-lg font-semibold hover:bg-accent hover:text-dark border border-solid border-accent hover:border-accent2 neon-emerald hover:neon-sky
+  }
 }
