--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,6 +53,6 @@
     @apply h-[180px] w-full resize-none rounded-lg p-6 capitalize;
   }
   .button {
-    @apply flex items-center bg-slate-800/60 text-light p-3 px-6 rounded-lg text-lg font-semibold hover:bg-accent hover:text-dark border border-solid border-accent hover:border-accent2 neon-emerald hover:neon-sky
+    @apply flex items-center rounded-lg border border-solid border-accent bg-slate-800/60 p-3 px-6 text-lg font-semibold text-light neon-emerald hover:border-accent2 hover:bg-accent hover:text-dark hover:neon-sky;
   }
 }
