--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,6 +21,12 @@
   color: #1c92ff;
 }
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 @layer base {
   body {
     @apply bg-secondary bg-gradient-to-r from-primary/10 via-black/30 to-black/10 leading-relaxed scrollbar-hide;
