--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,7 +36,7 @@ body {
     @apply bg-pagebg bg-gradient-to-r from-primary/10 via-black/30 to-black/10 leading-relaxed scrollbar-hide;
   }
   main {
-    @apply h-[100vh] flex w-full items-center justify-center bg-primary/30;
+    @apply flex w-full items-center justify-center bg-primary/30;
   }
   .page {
     /* min-h-screen NEW h-screen OLD */
